--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <section class="search">
         <div class="container">
           <div class="search-box">
-            <input type="text" placeholder="Что хотите посмотреть?">
-            <button>
+            <input id="search-input" type="text" placeholder="Что хотите посмотреть?">
+            <button id="search-button">
               <img src="img/search.svg" alt="search">
               <span>Найти</span>
             </button>
@@ -158,7 +158,7 @@
     </main>
   </div>
 
-
+  <script src="js/script.js" defer></script>
 </body>
 
 </html>
